Added StandardWorkflow, which is buildable from Workflow#builder